--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <title>Introduction to CSS Lab</title>
     <!-- Your code here! -->
   </head>
-
+  <link rel="stylesheet" href="./style.css"/>
   <body>
-
+    
     <div>
       <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
       <p>As we write CSS these are the type of questions we might ask ourselves:</p>
-
       <ul>
         <li class='perspective-questions'>Should the layout of the text be in a single or double column?</li>
         <li class='perspective-questions'>Should we use a different font color for the header?</li>
